[styles.css] added ui-sidebar overflow, red-minus, and green-plus [app.component.html] added blockScroll to the sidebar and the dialogs [app.component.ts] added a getter for deckSize, and added addCard and addCharacter [app.module.ts] added DialogModule and SidebarCardComponent [card.model.ts] added count [card.service.ts] made currentDeckSize and characterPoints private and fixed all of the logic for adding and removing cards. also added isCardInDeck() and getter for deckSize [card.component.html] added dialogs [card.component.ts] added logic for if a card is character or not and added getter for cardSelected
NEW FILES:
-------------------------------------------------
[sidebar-card.component.html]
[sidebar-card.component.ts]

--- a/src/styles.css
+++ b/src/styles.css
@@ -42,9 +42,21 @@ body {
   right: 10px;
 }
 
+.ui-sidebar {
+  overflow-y: auto;
+}
+
 .ui-toolbar {
   position: fixed;
   width: 100%;
   z-index: 1;
   border-radius: 0 !important;
+}
+
+.red-minus {
+  color: red;
+}
+
+.green-plus {
+  color: green;
 }
